--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 <body>
-  <div class="aaa"><img src="./eisenhower-matrix.jpg"><a class="more-inf"
+  <div class="preview-info"><img src="./eisenhower-matrix.jpg"><a class="more-info"
       href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a></div>
-  <div class="centered-main-page-element">
-    <p id="top-section-for-adding-element-to-list"><label for="new-task">Add Item</label>
+  <div class="main-block-app">
+    <p id="top-new-task"><label for="new-task">Add Item</label>
       <div class="task-row-wrapper"><input id="new-task" class="task" type="text"><button>Add</button></div>
     </p>
     <h3>Todo</h3>
