--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
-<body>
-  <div class="preview-info"><img src="./eisenhower-matrix.jpg"><a class="more-info"
+<body class="page">
+  <div class="preview-info"><img class="preview-img" src="./eisenhower-matrix.jpg"><a class="more-info"
       href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a></div>
   <div class="main-block-app">
     <p id="top-new-task"><label for="new-task">Add Item</label>
-      <div class="task-row-wrapper"><input id="new-task" class="task" type="text"><button>Add</button></div>
+      <div class="task-row-wrapper"><input id="new-task" class="input task" type="text"><button class="btn">Add</button></div>
     </p>
-    <h3>Todo</h3>
+    <h3 class="h3-info">Todo</h3>
     <ul id="incomplete-tasks">
-      <li><input type="checkbox"><label class="task">Pay Bills</label><input type="text" class="task"><button
-          class="edit">Edit</button><button class="delete"><img src="./remove.svg"></button></li>
-      <li class="edit-mode"><input type="checkbox"><label class="task">Go Shopping</label><input type="text"
+      <li class="li"><input class="input" type="checkbox"><label class="label label-task task">Pay Bills</label><input type="text" class="input task"><button
+          class="btn edit">Edit</button><button class="btn delete"><img class="img-remove" src="./remove.svg"></button></li>
+      <li class="li edit-mode"><input  class="input"" type="checkbox"><label class="label label-task task">Go Shopping</label><input type="text"
           value="Go Shopping" 
-          class="task"><button class="edit">Save</button><button class="delete"><img
-            src="./remove.svg"></button></li>
+          class="input task"><button class="btn edit">Save</button><button class="btn delete"><img
+            class="img-remove" src="./remove.svg"></button></li>
     </ul>
-    <h3>Completed</h3>
+    <h3 class="h3-info">Completed</h3>
     <ul id="completed-tasks">
-      <li><input type="checkbox" checked><label class="task">See the Doctor</label><input type="text"
-          class="task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg"></button>
+      <li class="li"><input class="input" type="checkbox" checked><label class="label-task task">See the Doctor</label><input type="text"
+          class="input task"><button class="btn edit">Edit</button><button class="btn delete"><img  class="img-remove" src="./remove.svg"></button>
       </li>
     </ul>
   </div>
