--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 <body class="page">
-  <div class="preview-info"><img class="preview-img" src="./eisenhower-matrix.jpg"><a class="more-info"
-      href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a></div>
-  <div class="main-block-app">
+  <header class="preview-info"><img class="preview-img" src="./eisenhower-matrix.jpg"><a class="more-info"
+      href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a></header>
+  <main class="main-block-app">
     <p id="top-new-task"><label for="new-task">Add Item</label>
-      <div class="task-row-wrapper"><input id="new-task" class="input task" type="text"><button class="btn">Add</button></div>
+      <article class="task-row-wrapper"><input id="new-task" class="input task" type="text"><button class="btn">Add</button></article>
     </p>
     <h3 class="h3-info">Todo</h3>
     <ul id="incomplete-tasks">
@@ -27,7 +27,7 @@
           class="input task"><button class="btn edit">Edit</button><button class="btn delete"><img  class="img-remove" src="./remove.svg"></button>
       </li>
     </ul>
-  </div>
+  </main>
   <script src="app.js"></script>
 </body>
 
