--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 <body class="page">
-  <header class="preview-info"><img class="preview-img" src="./eisenhower-matrix.jpg"><a class="more-info"
+  <header class="preview-info"><img class="preview-img" src="./eisenhower-matrix.jpg" alt="preview image"><a class="more-info"
       href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a></header>
   <main class="main-block-app">
     <p id="top-new-task"><label for="new-task">Add Item</label>
@@ -15,16 +15,16 @@
     <h3 class="h3-info">Todo</h3>
     <ul id="incomplete-tasks">
       <li class="li"><input class="input" type="checkbox"><label class="label label-task task">Pay Bills</label><input type="text" class="input task"><button
-          class="btn edit">Edit</button><button class="btn delete"><img class="img-remove" src="./remove.svg"></button></li>
+          class="btn edit">Edit</button><button class="btn delete"><img class="img-remove" src="./remove.svg" alt="image remove arrow"></button></li>
       <li class="li edit-mode"><input  class="input"" type="checkbox"><label class="label label-task task">Go Shopping</label><input type="text"
           value="Go Shopping" 
           class="input task"><button class="btn edit">Save</button><button class="btn delete"><img
-            class="img-remove" src="./remove.svg"></button></li>
+            class="img-remove" src="./remove.svg" alt="image remove arrow"></button></li>
     </ul>
     <h3 class="h3-info">Completed</h3>
     <ul id="completed-tasks">
       <li class="li"><input class="input" type="checkbox" checked><label class="label-task task">See the Doctor</label><input type="text"
-          class="input task"><button class="btn edit">Edit</button><button class="btn delete"><img  class="img-remove" src="./remove.svg"></button>
+          class="input task"><button class="btn edit">Edit</button><button class="btn delete"><img  class="img-remove" src="./remove.svg" alt="image remove arrow"></button>
       </li>
     </ul>
   </main>
