fix: advance level - 2.1 BEM

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
       <article class="task-row-wrapper"><input id="new-task" class="input task" type="text"><button class="btn">Add</button></article>
     </p>
     <h3 class="h3-info">Todo</h3>
-    <ul id="incomplete-tasks">
-      <li class="li"><input class="input" type="checkbox"><label class="label label-task task">Pay Bills</label><input type="text" class="input task"><button
+    <ul id="incomplete-tasks" class="incomplete-menu">
+      <li class="incomplete-menu__item li"><input class="input" type="checkbox"><label class="label label-task task">Pay Bills</label><input type="text" class="input task"><button
           class="btn edit">Edit</button><button class="btn delete"><img class="img-remove" src="./remove.svg" alt="image remove arrow"></button></li>
-      <li class="li edit-mode"><input  class="input"" type="checkbox"><label class="label label-task task">Go Shopping</label><input type="text"
+      <li class="incomplete-menu__item li edit-mode"><input  class="input"" type="checkbox"><label class="label label-task task">Go Shopping</label><input type="text"
           value="Go Shopping" 
           class="input task"><button class="btn edit">Save</button><button class="btn delete"><img
             class="img-remove" src="./remove.svg" alt="image remove arrow"></button></li>
     </ul>
     <h3 class="h3-info">Completed</h3>
-    <ul id="completed-tasks">
-      <li class="li"><input class="input" type="checkbox" checked><label class="label-task task">See the Doctor</label><input type="text"
+    <ul id="completed-tasks" class="completed-menu">
+      <li class="completed-menu__item li"><input class="input" type="checkbox" checked><label class="label-task task">See the Doctor</label><input type="text"
           class="input task"><button class="btn edit">Edit</button><button class="btn delete"><img  class="img-remove" src="./remove.svg" alt="image remove arrow"></button>
       </li>
     </ul>
